--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <h2>SANJAY R J</h2>
         </div>
         <div class="about">
-            <h2>About</h2>
+            <div class="about-title">
+                <h2>About</h2>
+            </div>
             <div class="about-desc">
                 <div class="desc-txt">
                        <p>Hi Friends👋 <br>
-                          I'm Sanjay. I did my B.E CSE degree in CMS College Of Engineering and Technology at Coimbatore. I'd like to interest in web developer role so I started to studying MERN Full Stack Developer course in GUVI.
+                          I'm Sanjay. I did my B.E CSE degree in CMS College Of Engineering and Technology at Coimbatore. I'd like to interest in web developer role so I started to studying <span >MERN Full Stack Developer</span> course in <span>GUVI</span>.
                        </p>
                 </div>
                 <div class="desc-img">
@@ -26,22 +28,29 @@
             </div>
         </div>
         <div class="contact">
-            <div class="details">
-                    📱 +91 9080550825 <br>
-                    📧 sanjayramachandran2002@gmail.com <br>
-                    🏠 69d/10 Kesavaperumal Colony, Nagercoil, KK dist.
+             <div class="title">
+                <h2>Contact</h2>
             </div>
-            <div class="social-media-icons">
-                <a href="https://www.instagram.com/" target="_blank"><img src="./Images/instagram.png" alt="instagram-pic"></a>  
-                <a href="https://www.whatsapp.com/" target="_blank"><img src="./Images/whatsapp.png" alt="whatsapp-pic"></a> 
-                <a href="https://www.snapchat.com/" target="_blank"><img src="./Images/social.png" alt="snap-pic"></a>
-                <a href="https://in.linkedin.com/" target="_blank"><img src="./Images/linkedin.png" alt="linkedin-pic"></a>
-                <a href="https://github.com/Sanjay-250502" target="_blank"><img src="./Images/github.png" alt="github-pic"></a> 
-                <a href="https://web.telegram.org/a/" target="_blank"><img src="./Images/telegram.png" alt="telegram-pic">
-                </div>
-        <div class="footer">
-            <span>©️ Copyright 2023 code by Sanjay. All rights reserved</span>
+             <div class="details">    
+                    <div class="mydetail">
+                        📱 +91 9080550825 <br>
+                        📧 sanjayramachandran2002@gmail.com <br>
+                        🏠 69d/10 Kesavaperumal Colony, Nagercoil, KK dist.
+                    </div>
+                    <div class="social-media-icons">
+                        <a href="https://www.instagram.com/" target="_blank"><img class="social" src="./Images/instagram.png" alt="instagram-pic"></a>  
+                        <a href="https://www.whatsapp.com/" target="_blank"><img class="social" src="./Images/whatsapp.png" alt="whatsapp-pic"></a> 
+                        <a href="https://www.snapchat.com/" target="_blank"><img class="social" src="./Images/social.png" alt="snap-pic"></a>
+                        <a href="https://in.linkedin.com/" target="_blank"><img class="social" src="./Images/linkedin.png" alt="linkedin-pic"></a>
+                        <a href="https://github.com/Sanjay-250502" target="_blank"><img class="social" src="./Images/github.png" alt="github-pic"></a> 
+                        <a href="https://web.telegram.org/a/" target="_blank"><img class="social" src="./Images/telegram.png" alt="telegram-pic"></a>
+                    </div>
+             </div>
+            
         </div>
-    </div>
+        <div class="footer">
+           <p>©️ copyright | code by Sanjay | all rights reserved.</p> 
+        </div>
+    </div>  
 </body>
 </html>
